Fri Jun 24 17:06:33 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_daemon): should not start timer thread
	  twice.  fixed Bug#4920.

Fri Jun 24 15:54:14 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_shutdown): Try to shutdown SSL
	  connection more gracefully. Call SSL_shutdown() max 4 times until it
	  returns 1 (success). Bi-directional SSL close has several states but
	  SSL_shutdown() kicks only 1 transition per call. Max 4 is from
	  mod_ssl.c of Apache httpd that says 'max 2x pending + 2x data = 4'.
	  See #4237.

Fri Jun 24 07:24:37 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rake/version.rb:  Fixed VERSION to work with tool/rbinstall.rb
	* bin/rake:  Import bin/rake from 0.9.2
	* tool/rbinstall.rb (install):  Rake::VERSION is now in
	  lib/rake/version.rb.  Fixes `make install`

Fri Jun 24 07:11:37 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rake: Import Rake 0.9.2

Fri Jun 24 00:44:15 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (c_valid_{julian,gregorian}_p): fixed the range of month.

Fri Jun 24 00:14:23 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: trivial changes on text.

Thu Jun 23 22:46:57 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_x509name.c: Add X509::Name#hash_old as a wrapper
	  for X509_NAME_hash_old in OpenSSL 1.0.0. See #4805

	* test/openssl/test_x509name.rb (test_hash): Make test pass with
	  OpenSSL 1.0.0.

	* NEWS: Add it.

Thu Jun 23 19:30:53 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_set_time): Check
	  argument type with NUM2LONG if the arg is not a Time object.
	  See #4919.

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_set_timeout): Check
	  type with NUM2LONG. Time as an arg is not allowed. See #4919.

	* test/openssl/test_ssl_session.rb (test_session_time,
	  test_session_timeout): Test it.
